# game-framework

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
shaders/: defaultColorFragment.frag  defaultColorVertex.vert  defaultFragment.frag  defaultVertex.vert  fragment.frag  line.frag  line.vert  vertex.vert
src/: AudioFile.cpp  AudioFile.h  AudioSource.h  Color.h  Engine.cpp  Engine.h  Events.h  Game.cpp  Game.h  Player.cpp  Player.h  Position.h  Shapes.cpp  Shapes.h  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  TexturePosition.h  TextureRectangle.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
src/Audio/: AudioFile.h  AudioSource.cpp  AudioSource.h
src/ECS/: Body.cpp  Body.h  Camera.cpp  Camera.h  Components.cpp  Components.h  Entity.h  Scene.cpp  Scene.h  Sprite.h  Systems.cpp  Systems.h
src/Engine/: ApplicationState.h  Window.cpp  Window.h
src/Engine/Events/: Keyboard.cpp  Keyboard.h
src/Engine/GameObjects/: GameObject.cpp  GameObject.h  Player.cpp  Player.h  SpriteSheet.cpp  SpriteSheet.h
src/Engine/LevelEditor/: LevelEditor.cpp  LevelEditor.h
src/Engine/Renderer/: Camera.cpp  Camera.h  ElementBuffer.cpp  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/GUI/: Gui.cpp  Gui.h
src/Input/: Keyboard.h
src/Renderer/: Camera.cpp  Camera.h  ElementBuffer.cpp  ElementBuffer.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/TileMap/: Grid.cpp  Grid.h  SpriteSheet.cpp  SpriteSheet.h  Tile.h  TileMap.cpp  TileMap.h  TileType.h
src/Utils/: LoadWav.h  ReadFile.cpp  ReadFile.h
src/events/: Event.h  Observer.h  Subject.h  WindowResizeEvent.h
src/game/: Game.cpp  Player.cpp  Player.h
